<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_grade_cridit1"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/tv_grade_cridit1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_grade_cridit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_grade_cridit2" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_grade_cridit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_grade_cridit"
            android:textSize="10sp">

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" 
                android:layout_weight="1">
            </LinearLayout>

            <Button
                android:id="@+id/bt_grade_cridit"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_form"
                android:text="@string/bt_select"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" 
                android:layout_weight="1">
            </LinearLayout>

        </LinearLayout>

</LinearLayout>

    <TextView
        android:id="@+id/tv_grade_cridit"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@drawable/setbar_bg"
        android:text="@string/tv_grade_cridit"
        android:textSize="15sp"
        android:layout_gravity="center" 
        android:textColor="@android:color/holo_purple"/>
    
    <!--     second        -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <LinearLayout
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tv_choose1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/tv_choose1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_choose2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_choose2" 
                android:textSize="10sp"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="选课门数，总学分，平均成绩" 
                android:textSize="10sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" 
            android:layout_weight="1">

            <Button
                android:id="@+id/bt_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/bt_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/button_form"
            android:textColor="@android:color/white"
            android:text="@string/bt_select" />

</LinearLayout>

    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@drawable/setbar_bg"
        android:text="@string/tv_grade_cridit" 
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@android:color/holo_purple"
        android:singleLine="false"/>

    <!--     third        -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/bt_avg"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="查询各科情况统计"
            android:background="@drawable/button_form"
            android:textColor="@android:color/white"
             />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_classroom1"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70sp"
                    android:layout_weight="0.33"
                    android:text="@string/tv_classroom1"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_classroom"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/ht_classroom"
                android:textSize="10sp" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_classroom"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_form"
            android:text="@string/bt_select"
            android:textColor="@android:color/white"
             />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_both"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
